--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install: 
 FILE="-Dfile=TrackasiaGLAndroidSDK-release.aar" 
-mvn install:install-file $FILE -DgroupId=com.group.module -DartifactId=test -Dversion=1.0 -Dpackaging=aar -DpomFile=pom.xml
+mvn install:install-file $FILE -DgroupId=com.track-asia -DartifactId=test -Dversion=1.0 -Dpackaging=aar -DpomFile=pom.xml
