#Change - Update Pom Anndroid

--- a/platform/android/pom.xml
+++ b/platform/android/pom.xml
@@ -6,7 +6,7 @@
   <artifactId>trackasia</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
-  <name>trackasia-native</name>
+  <name>trackasia-android</name>
 
   <distributionManagement>
     <repository>
