--- a/platform/android/gradle.properties
+++ b/platform/android/gradle.properties
@@ -5,3 +5,9 @@ org.gradle.jvmargs=-Xmx4096M
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+
+signing.keyId=A0455BA3
+signing.password=secret
+signing.secretKeyRingFile=/Volumes/DATA/ADVN-GIT/TRACK-ASIA/trackasia-native/platform/android/signing-key.gpg
+sonatypeUsername=sangnguyen
+sonatypePassword=@AbcSang070992
