--- a/benchmark/android/app/src/main/AndroidManifest.xml
+++ b/benchmark/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.mapbox.mapboxsdk.maps.benchmark_runner"
+          package="com.trackasia.trackasiasdk.maps.benchmark_runner"
           android:versionCode="1"
           android:versionName="1.0">
   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
