--- a/platform/android/build.gradle
+++ b/platform/android/build.gradle
@@ -34,34 +34,34 @@ subprojects {
 }
 
 apply from: "${rootDir}/gradle/publish-root.gradle"
-publishing {
-    publications {
-        bar(MavenPublication) {
-            groupId 'com.trackasia' // Replace with group ID
-            artifactId 'android-sdk'
-            version '1.0.0'
-            artifact("$buildDir/outputs/aar/TrackasiaGLAndroidSDK-release.aar")
-        }
-    }
-    repositories {
-        maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/track-asia/trackasia-native")
-            credentials {
-                username = "sunny0092"//project.findProperty("gpr.user") ?: System.getenv("USERNAME")
-                password = "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"//project.findProperty("gpr.key") ?: System.getenv("TOKEN")
-            }
-        }
-    }
-}
-//nexusPublishing {
+//publishing {
+//    publications {
+//        bar(MavenPublication) {
+//            groupId 'com.trackasia' // Replace with group ID
+//            artifactId 'android-sdk'
+//            version '1.0.0'
+//            artifact("$buildDir/outputs/aar/TrackasiaGLAndroidSDK-release.aar")
+//        }
+//    }
 //    repositories {
-//        sonatype {
-//            stagingProfileId = sonatypeStagingProfileId
-//            username = ossrhUsername
-//            password = ossrhPassword
-//            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
-//            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+//        maven {
+//            name = "GitHubPackages"
+//            url = uri("https://maven.pkg.github.com/track-asia/trackasia-native")
+//            credentials {
+//                username = "sunny0092"//project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+//                password = "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"//project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+//            }
 //        }
 //    }
 //}
+nexusPublishing {
+    repositories {
+        sonatype {
+            stagingProfileId = "31754de92605f9"
+            username = "sangnguyen"
+            password = "@AbcSang070992"
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+        }
+    }
+}
