#CHANGE - Upload File Test

--- a/platform/android/TrackasiaGLAndroidSDKTestApp/build.gradle
+++ b/platform/android/TrackasiaGLAndroidSDKTestApp/build.gradle
@@ -63,8 +63,8 @@ android {
 
 dependencies {
     implementation dependenciesList.kotlinLib
-//    implementation project(':TrackasiaGLAndroidSDK')
-    implementation files('libs/android-1.0.0-sdk.aar')
+    implementation project(':TrackasiaGLAndroidSDK')
+//    implementation files('libs/android-1.0.0-sdk.aar')
 //    implementation 'com.github.track-asia:trackasia-android-sdk:1.0.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-gestures:0.7.0'
 
