--- a/platform/qt/QMapLibreGLConfig.cmake.in
+++ b/platform/qt/QMapLibreGLConfig.cmake.in
@@ -11,5 +11,5 @@ if(@MLN_QT_STATIC@ AND NOT @MLN_QT_INSIDE_PLUGIN@ AND NOT @MLN_QT_WITH_INTERNAL_
                   COMPONENTS Sql @REQUIRED_QT_VERSION@)
 endif()
 
-include("${CMAKE_CURRENT_LIST_DIR}/QMapLibreGLTargets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/QTrackasiaGLTargets.cmake")
 @PACKAGE_INCLUDE_QCHTARGETS@
