--- a/platform/ios/platform/macos/macos.xcodeproj/xcshareddata/xcschemes/CI.xcscheme
+++ b/platform/ios/platform/macos/macos.xcodeproj/xcshareddata/xcschemes/CI.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "DA839E911CC2E3400062CAFB"
-               BuildableName = "Mapbox GL.app"
+               BuildableName = "Trackasia GL.app"
                BlueprintName = "macosapp"
                ReferencedContainer = "container:macos.xcodeproj">
             </BuildableReference>
@@ -47,7 +47,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "DA839E911CC2E3400062CAFB"
-            BuildableName = "Mapbox GL.app"
+            BuildableName = "Trackasia GL.app"
             BlueprintName = "macosapp"
             ReferencedContainer = "container:macos.xcodeproj">
          </BuildableReference>
@@ -90,7 +90,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "DA839E911CC2E3400062CAFB"
-            BuildableName = "Mapbox GL.app"
+            BuildableName = "Trackasia GL.app"
             BlueprintName = "macosapp"
             ReferencedContainer = "container:macos.xcodeproj">
          </BuildableReference>
@@ -107,7 +107,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "DA839E911CC2E3400062CAFB"
-            BuildableName = "Mapbox GL.app"
+            BuildableName = "Trackasia GL.app"
             BlueprintName = "macosapp"
             ReferencedContainer = "container:macos.xcodeproj">
          </BuildableReference>
