--- a/platform/ios/platform/macos/macos.xcodeproj/xcshareddata/xcschemes/macosapp.xcscheme
+++ b/platform/ios/platform/macos/macos.xcodeproj/xcshareddata/xcschemes/macosapp.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "DA839E911CC2E3400062CAFB"
-               BuildableName = "Mapbox GL.app"
+               BuildableName = "Trackasia GL.app"
                BlueprintName = "macosapp"
                ReferencedContainer = "container:macos.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "DA839E911CC2E3400062CAFB"
-            BuildableName = "Mapbox GL.app"
+            BuildableName = "Trackasia GL.app"
             BlueprintName = "macosapp"
             ReferencedContainer = "container:macos.xcodeproj">
          </BuildableReference>
@@ -71,7 +71,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "DA839E911CC2E3400062CAFB"
-            BuildableName = "Mapbox GL.app"
+            BuildableName = "Trackasia GL.app"
             BlueprintName = "macosapp"
             ReferencedContainer = "container:macos.xcodeproj">
          </BuildableReference>
@@ -88,7 +88,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "DA839E911CC2E3400062CAFB"
-            BuildableName = "Mapbox GL.app"
+            BuildableName = "Trackasia GL.app"
             BlueprintName = "macosapp"
             ReferencedContainer = "container:macos.xcodeproj">
          </BuildableReference>
