--- a/platform/android/gradle.properties
+++ b/platform/android/gradle.properties
@@ -2,3 +2,5 @@ android.useAndroidX=true
 systemProp.org.gradle.internal.http.connectionTimeout=360000
 systemProp.org.gradle.internal.http.socketTimeout=360000
 org.gradle.jvmargs=-Xmx4096M
+android.enableJetifier=true
+android.enableR8=true
