--- a/platform/android/gradle.properties
+++ b/platform/android/gradle.properties
@@ -2,5 +2,6 @@ android.useAndroidX=true
 systemProp.org.gradle.internal.http.connectionTimeout=360000
 systemProp.org.gradle.internal.http.socketTimeout=360000
 org.gradle.jvmargs=-Xmx4096M
-android.enableJetifier=true
-android.enableR8=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
