#Change - Update IOS Version 1.0.2

--- a/platform/ios/Makefile
+++ b/platform/ios/Makefile
@@ -1,4 +1,4 @@
-export BUILDTYPE ?= Debug
+export BUILDTYPE ?= Release
 export IS_LOCAL_DEVELOPMENT ?= true
 export TARGET_BRANCH ?= main
 export CI ?= 0
