#Change - Update Version Android 1.0.15

--- a/platform/android/TrackasiaGLAndroidSDKTestApp/build.gradle
+++ b/platform/android/TrackasiaGLAndroidSDKTestApp/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation dependenciesList.supportDesign
     implementation dependenciesList.supportConstraintLayout
 
-//    implementation dependenciesList.multidex
+    implementation dependenciesList.multidex
 
     implementation dependenciesList.gmsLocation
     implementation dependenciesList.timber
