--- a/platform/android/TrackasiaGLAndroidSDKTestApp/build.gradle
+++ b/platform/android/TrackasiaGLAndroidSDKTestApp/build.gradle
@@ -64,8 +64,8 @@ android {
 dependencies {
     implementation dependenciesList.kotlinLib
 
-//    implementation project(':TrackasiaGLAndroidSDK')
-    implementation "io.github.track-asia:android-sdk:1.0.16"
+    implementation project(':TrackasiaGLAndroidSDK')
+//    implementation "io.github.track-asia:android-sdk:1.0.19"
     implementation dependenciesList.mapboxJavaTurf
 
     implementation dependenciesList.supportAppcompatV7
