--- a/platform/glfw/BUILD.bazel
+++ b/platform/glfw/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//bazel:flags.bzl", "CPP_FLAGS", "MAPLIBRE_FLAGS")
+load("//bazel:flags.bzl", "CPP_FLAGS", "TRACKASIA_FLAGS")
 
 objc_library(
     name = "metal_backend",
@@ -9,7 +9,7 @@ objc_library(
         "metal_backend.h",
         "metal_backend.mm",
     ],
-    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
+    copts = CPP_FLAGS + TRACKASIA_FLAGS,
     deps = [
         "//:trackasia_lib",
         "@glfw",
@@ -35,7 +35,7 @@ cc_binary(
                    "glfw_gl_backend.hpp",
                ],
            }),
-    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
+    copts = CPP_FLAGS + TRACKASIA_FLAGS,
     linkopts = [
         "-lglfw",
     ] + select({
