--- a/platform/BUILD.bazel
+++ b/platform/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@aspect_rules_js//js:defs.bzl", "js_binary")
-load("//bazel:flags.bzl", "CPP_FLAGS", "MAPLIBRE_FLAGS", "WARNING_FLAGS")
+load("//bazel:flags.bzl", "CPP_FLAGS", "TRACKASIA_FLAGS", "WARNING_FLAGS")
 
 objc_library(
     name = "macos-objcpp",
@@ -15,7 +15,7 @@ objc_library(
     hdrs = [
         "//platform/darwin:include/mbgl/util/image+MLNAdditions.hpp",
     ],
-    copts = CPP_FLAGS + MAPLIBRE_FLAGS + [
+    copts = CPP_FLAGS + TRACKASIA_FLAGS + [
         "-fcxx-modules",
         "-fmodules",
         "-Wno-vla-extension",
@@ -60,7 +60,7 @@ objc_library(
     copts = select({
         "@platforms//os:ios": WARNING_FLAGS["ios"],
         "@platforms//os:macos": WARNING_FLAGS["macos"],
-    }) + MAPLIBRE_FLAGS + [
+    }) + TRACKASIA_FLAGS + [
         "-fmodules",
         "-Wno-deprecated-declarations",
     ],
@@ -93,7 +93,7 @@ objc_library(
             "//platform/darwin:darwin_objcpp_custom_drawable_srcs",
         ],
     }),
-    copts = CPP_FLAGS + MAPLIBRE_FLAGS + [
+    copts = CPP_FLAGS + TRACKASIA_FLAGS + [
         "-fcxx-modules",
         "-fmodules",
         "-Wno-c99-extensions",
@@ -147,7 +147,7 @@ objc_library(
     copts = select({
         "@platforms//os:ios": WARNING_FLAGS["ios"],
         "@platforms//os:macos": WARNING_FLAGS["macos"],
-    }) + MAPLIBRE_FLAGS + [
+    }) + TRACKASIA_FLAGS + [
         "-fmodules",
         "-Wno-gnu-zero-variadic-macro-arguments",
         "-Wno-variadic-macros",
@@ -247,7 +247,7 @@ objc_library(
         "//platform/darwin:app/ExampleCustomDrawableStyleLayer.h",
         "//platform/darwin:app/ExampleCustomDrawableStyleLayer.mm",
     ],
-    copts = CPP_FLAGS + MAPLIBRE_FLAGS + WARNING_FLAGS["ios"] + [
+    copts = CPP_FLAGS + TRACKASIA_FLAGS + WARNING_FLAGS["ios"] + [
         "-fcxx-modules",
         "-fmodules",
         "-Wno-c99-extensions",
@@ -299,7 +299,7 @@ objc_library(
     name = "ios-benchapp",
     srcs = ["//platform/ios/benchmark:ios_benchmark_srcs"],
     hdrs = ["//platform/ios/benchmark:ios_benchmark_hdrs"],
-    copts = CPP_FLAGS + MAPLIBRE_FLAGS,
+    copts = CPP_FLAGS + TRACKASIA_FLAGS,
     includes = [
         "darwin/app",
         "darwin/src",
