--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -89,9 +89,9 @@ jobs:
           RELEASE_VERSION="$( git describe --tags --match=android-v*.*.* --abbrev=0 | sed 's/^android-v//' )"
           echo "Latest version from tag: $RELEASE_VERSION"
           if [ -n "$RELEASE_VERSION" ]; then
-            sed -i -e "s/^VERSION_NAME=.*/VERSION_NAME=${RELEASE_VERSION}/" MapLibreAndroid/gradle.properties
-            echo "MapLibreAndroid/gradle.properties:"
-            cat MapLibreAndroid/gradle.properties
+            sed -i -e "s/^VERSION_NAME=.*/VERSION_NAME=${RELEASE_VERSION}/" TrackAsiaAndroid/gradle.properties
+            echo "TrackAsiaAndroid/gradle.properties:"
+            cat TrackAsiaAndroid/gradle.properties
           fi
         shell: bash
 
@@ -100,12 +100,12 @@ jobs:
 
       - name: Build release Test App
         run: |
-          MAPLIBRE_DEVELOPER_CONFIG_XML='${{ secrets.MAPLIBRE_DEVELOPER_CONFIG_XML }}'
-          if [ -n "${MAPLIBRE_DEVELOPER_CONFIG_XML}" ]; then
-            echo "${MAPLIBRE_DEVELOPER_CONFIG_XML}" > MapLibreAndroidTestApp/src/main/res/values/developer-config.xml
+          TRACKASIA_DEVELOPER_CONFIG_XML='${{ secrets.TRACKASIA_DEVELOPER_CONFIG_XML }}'
+          if [ -n "${TRACKASIA_DEVELOPER_CONFIG_XML}" ]; then
+            echo "${TRACKASIA_DEVELOPER_CONFIG_XML}" > TrackAsiaAndroidTestApp/src/main/res/values/developer-config.xml
             make android
           else
-            echo "No secrets.MAPLIBRE_DEVELOPER_CONFIG_XML variable set, skipping apk build..."
+            echo "No secrets.TRACKASIA_DEVELOPER_CONFIG_XML variable set, skipping apk build..."
           fi
         shell: bash
 
@@ -138,8 +138,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: platform/android/MapLibreAndroid/build/outputs/aar/MapLibreAndroid-drawable-release.aar
-          asset_name: MapLibreAndroid-release.aar
+          asset_path: platform/android/TrackAsiaAndroid/build/outputs/aar/TrackAsiaAndroid-drawable-release.aar
+          asset_name: TrackAsiaAndroid-release.aar
           asset_content_type: application/zip
 
       - name: Upload debug symbols
