--- a/.github/workflows/pr-bloaty-ios.yml
+++ b/.github/workflows/pr-bloaty-ios.yml
@@ -6,7 +6,7 @@ on:
     types:
       - completed
 env:
-  download_url: https://maplibre-native.s3.eu-central-1.amazonaws.com
+  download_url: https://trackasia-native.s3.eu-central-1.amazonaws.com
 
 permissions:
   pull-requests: write
@@ -56,10 +56,10 @@ jobs:
           cmake -B build -G Ninja -S .
           cmake --build build
 
-      - name: Download MapLibre_dynamic-main, MapLibre_DWARF-main
+      - name: Download TrackAsia_dynamic-main, TrackAsia_DWARF-main
         run: |
-          wget -O MapLibre_dynamic-main "${download_url}/size-test-ios/MapLibre_dynamic-main"
-          wget -O MapLibre_DWARF-main "${download_url}/size-test-ios/MapLibre_DWARF-main"
+          wget -O TrackAsia_dynamic-main "${download_url}/size-test-ios/TrackAsia_dynamic-main"
+          wget -O TrackAsia_DWARF-main "${download_url}/size-test-ios/TrackAsia_DWARF-main"
 
       - uses: ./.github/actions/get-pr-number
         id: get-pr-number
@@ -67,10 +67,10 @@ jobs:
       - uses: ./.github/actions/download-workflow-run-artifact
         with:
           artifact-name: ios-size-test-files
-          expect-files: "MapLibre_dynamic,MapLibre_DWARF"
+          expect-files: "TrackAsia_dynamic,TrackAsia_DWARF"
 
       - name: Run Bloaty
-        run: bloaty/build/bloaty --debug-file MapLibre_DWARF --debug-file MapLibre_DWARF-main MapLibre_dynamic -n 0 -s vm -d compileunits -- MapLibre_dynamic-main > bloaty_diff.txt
+        run: bloaty/build/bloaty --debug-file TrackAsia_DWARF --debug-file TrackAsia_DWARF-main TrackAsia_dynamic -n 0 -s vm -d compileunits -- TrackAsia_dynamic-main > bloaty_diff.txt
 
       - name: Configure AWS Credentials
         if: vars.OIDC_AWS_ROLE_TO_ASSUME 
@@ -83,7 +83,7 @@ jobs:
       - name: Prepare Bloaty message
         run: |
           report_path=bloaty-results-ios/pr-${{ steps.get-pr-number.outputs.pr-number }}-compared-to-main.txt
-          aws s3 cp bloaty_diff.txt s3://maplibre-native/"$report_path"
+          aws s3 cp bloaty_diff.txt s3://trackasia-native/"$report_path"
           {
             echo "# Bloaty Results (iOS) 🐋"
             echo 'Compared to main'
