--- a/.github/workflows/android-device-test.yml
+++ b/.github/workflows/android-device-test.yml
@@ -25,14 +25,14 @@ jobs:
           },
           {
             artifactName: benchmarkAPKs,
-            testFile: "MapLibreAndroidTestApp-drawable-release-androidTest.apk",
-            appFile: "MapLibreAndroidTestApp-drawable-release.apk",
+            testFile: "TrackAsiaAndroidTestApp-drawable-release-androidTest.apk",
+            appFile: "TrackAsiaAndroidTestApp-drawable-release.apk",
             name: "Android Benchmark",
-            testFilter: "org.maplibre.android.benchmark.Benchmark",
+            testFilter: "org.trackasia.android.benchmark.Benchmark",
             # top devices, query with `aws list-device-pools --arn <project_arn>`
             devicePool: "arn:aws:devicefarm:us-west-2::devicepool:082d10e5-d7d7-48a5-ba5c-b33d66efa1f5",
             # benchmark-android.yaml
-            # see https://github.com/maplibre/ci-runners/tree/main/aws-device-farm/custom-test-envs
+            # see https://github.com/trackasia/ci-runners/tree/main/aws-device-farm/custom-test-envs
             testSpecArn: "arn:aws:devicefarm:us-west-2:373521797162:upload:20687d72-0e46-403e-8f03-0941850665bc/14862afb-cf88-44aa-9f1e-5131cbb22f01"
           },
           {
@@ -74,8 +74,8 @@ jobs:
         uses: tibdex/github-app-token@v2
         with:
           revoke: false  # revoking will fail for long running workflows, because the token will already have expired
-          app_id: ${{ secrets.MAPLIBRE_NATIVE_BOT_APP_ID }}
-          private_key: ${{ secrets.MAPLIBRE_NATIVE_BOT_PRIVATE_KEY }}
+          app_id: ${{ secrets.TRACKASIA_NATIVE_BOT_APP_ID }}
+          private_key: ${{ secrets.TRACKASIA_NATIVE_BOT_PRIVATE_KEY }}
 
       - name: Check if comment on PR contains '!benchmark android'
         if: matrix.test.name == 'Android Benchmark' && steps.get-pr-number.outputs.pr-number
@@ -164,8 +164,8 @@ jobs:
         id: generate_token_2
         uses: tibdex/github-app-token@v2
         with:
-          app_id: ${{ secrets.MAPLIBRE_NATIVE_BOT_APP_ID }}
-          private_key: ${{ secrets.MAPLIBRE_NATIVE_BOT_PRIVATE_KEY }}
+          app_id: ${{ secrets.TRACKASIA_NATIVE_BOT_APP_ID }}
+          private_key: ${{ secrets.TRACKASIA_NATIVE_BOT_PRIVATE_KEY }}
 
       - uses: LouisBrunner/checks-action@v2.0.0
         if: always() && env.run_device_test == 'true'
