--- a/.github/workflows/ios-device-test.yml
+++ b/.github/workflows/ios-device-test.yml
@@ -16,7 +16,7 @@ jobs:
         ]
       fail-fast: true
     runs-on: ubuntu-22.04
-    if: github.repository_owner == 'maplibre' && github.event.workflow_run.conclusion == 'success'
+    if: github.repository_owner == 'trackasia' && github.event.workflow_run.conclusion == 'success'
     steps:
       - uses: actions/checkout@v4
 
@@ -24,8 +24,8 @@ jobs:
         id: generate_token
         uses: tibdex/github-app-token@v2
         with:
-          app_id: ${{ secrets.MAPLIBRE_NATIVE_BOT_APP_ID }}
-          private_key: ${{ secrets.MAPLIBRE_NATIVE_BOT_PRIVATE_KEY }}
+          app_id: ${{ secrets.TRACKASIA_NATIVE_BOT_APP_ID }}
+          private_key: ${{ secrets.TRACKASIA_NATIVE_BOT_PRIVATE_KEY }}
 
       - uses: LouisBrunner/checks-action@v2.0.0
         id: create_check
