--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -26,7 +26,7 @@ jobs:
         id: check
         run: |
           currentVersion="$( node -e "console.log(require('./package.json').version)" )"
-          isPublished="$( npm view @maplibre/maplibre-gl-native versions --json | jq -c --arg cv "$currentVersion" 'any(. == $cv)' )"
+          isPublished="$( npm view @trackasia/trackasia-gl-native versions --json | jq -c --arg cv "$currentVersion" 'any(. == $cv)' )"
           echo "published=$isPublished" >> "$GITHUB_OUTPUT"
           echo "currentVersion: $currentVersion"
           echo "isPublished: $isPublished"
@@ -171,7 +171,7 @@ jobs:
           path: build/headers
           key: ${{ runner.os }}-${{ runner.arch }}-cmake-node-module-deps
 
-      - name: Configure maplibre-native (MacOS)
+      - name: Configure trackasia-native (MacOS)
         if: runner.os == 'MacOS'
         run: |
           cmake . -B build \
@@ -180,7 +180,7 @@ jobs:
             -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
             -DMLN_WITH_NODE=ON
 
-      - name: Configure maplibre-native (Linux)
+      - name: Configure trackasia-native (Linux)
         if: runner.os == 'Linux'
         shell: bash -leo pipefail {0}
         run: |
@@ -210,7 +210,7 @@ jobs:
           key: |
             ${{ matrix.runs-on }}-${{ env.BUILDTYPE }}-${{ github.job }}-${{ hashFiles( '.git/modules/platform/windows/vendor/vcpkg/HEAD' ) }}-${{ hashFiles( 'platform/windows/Get-VendorPackages.ps1' ) }}
 
-      - name: Configure maplibre-native (Windows)
+      - name: Configure trackasia-native (Windows)
         if: runner.os == 'Windows'
         run: |
           cmake . -B build \
@@ -219,12 +219,12 @@ jobs:
             -DCMAKE_CXX_COMPILER_LAUNCHER=sccache \
             -DMLN_WITH_NODE=ON
 
-      - name: Build maplibre-native (MacOS/Linux)
+      - name: Build trackasia-native (MacOS/Linux)
         if: runner.os == 'MacOS' || runner.os == 'Linux'
         run: |
           cmake --build build -j "$(nproc 2>/dev/null || sysctl -n hw.ncpu 2>/dev/null)"
 
-      - name: Build maplibre-native (Windows)
+      - name: Build trackasia-native (Windows)
         if: runner.os == 'Windows'
         run: |
           cmake --build build
